infra/k8s/prod/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: pranavsrivatsav/ticketing-orders
          imagePullPolicy: Always
---
# service configuration to target and expose auth pods
# we dont even mention anything about the deployment here
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
spec:
  selector:
    app: orders
  ports:
    - name: orders # name of the port - can be used for identification, if a service is exposing other ports of a pod
      protocol: TCP
      port: 3000
      targetPort: 3000
